# playkid

./: .project  Cargo.toml  README.md  c q  qq
.github/workflows/: release.yml
img/: logo-3x.avif  logo.avif  logo_full.xcf
src/: apu.rs  canvas.rs  cartridge.rs  cli.rs  constants.rs  debug.rs  debug2.rs  debugmanager.rs  debugterm.rs  display.rs  eventhandler.rs  gui.rs  instruction.rs  joypad.rs  machine.rs  main.rs  memory.rs  playkid.rs  ppu.rs  registers.rs  timer.rs  ui.rs  uimanager.rs  uistate.rs
src/cartridge/: mbc1.rs  mbc2.rs  mbc3.rs
src/ui/: button.rs  debugui.rs  label.rs  layout.rs  textfield.rs  uimanager.rs
