[package]
name = "pixels-native"
version = "0.1.0"
description = "A Game Boy emulator and debugger"
authors = ["Toni Sagristà Sellés <me@tonisagrista.com>"]
edition = "2024"
publish = false

[dependencies]
clap = { version = "4.5.*", features = ["derive"] }
clap_derive = { version = "4.0.0-rc.1"}
env_logger = "0.11.8"
colored = "2.*"
rand = "0.9"
error-iter = "0.4.1"
egui = "0.26"
egui-wgpu = "0.26.0"
egui-winit = { version = "0.26", default-features = false, features = ["links"] }
pixels = "0.15"
winit = "0.29"
winit_input_helper = "0.15"
log = "0.4.*"
rodio = "0.21.1"


