[package]
name = "playkid"
version = "0.4.0"
authors = ["Toni Sagristà Sellés <me@tonisagrista.com>"]
description = "Game Boy emulator and debugger written in Rust."
documentation = "https://tonisagrista.com/projects/playkid"
homepage = "https://tonisagrista.com/projects/playkid"
repository = "https://codeberg.org/langurmonkey/playkid"
edition = "2024"
license-file = "LICENSE"
readme = "README.md"
publish = false

[dependencies]
eframe = "0.33"
image = "0.25"
egui = "0.33"
clap = { version = "4.5.*", features = ["derive"] }
clap_derive = { version = "4.0.0-rc.1"}
env_logger = "0.11.8"
colored = "2.*"
rand = "0.9"
error-iter = "0.4.1"
log = "0.4.*"
rodio = "0.21.1"
gilrs = "0.11.1"
egui-toast = "0.19.1"
rfd = "0.17.2"
pollster = "0.4.0"
